@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/grp_target.py,v 1.3 2004/10/15 02:27:58 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/grp_target.py,v 1.4 2004/12/16 23:13:24 wolf31o2 Exp $
 
 """
 The builder class for GRP (Gentoo Reference Platform) builds.
@@ -28,7 +28,10 @@ class grp_target(generic_stage_target):
 			self.required_values.append("grp/"+x+"/type")
 			
 		generic_stage_target.__init__(self,spec,addlargs)
-
+	
+	def set_target_path(self):
+	    self.settings["target_path"]=self.settings["storedir"]+"/builds/"+self.settings["target_subpath"]
+	
 	def run_local(self):
 		for pkgset in self.settings["grp"]:
 			# example call: "grp.sh run pkgset cd1 xmms vim sys-apps/gleep"
@@ -41,6 +44,18 @@ class grp_target(generic_stage_target):
 			except CatalystError:
 				self.unbind()
 				raise CatalystError,"GRP build aborting due to error."
+
+	def set_action_sequence(self):
+	    self.settings["action_sequence"]=["dir_setup","unpack_and_bind","chroot_setup",\
+	    				    "setup_environment","run_local","unbind"]
+	
+	def set_use(self):
+	    self.settings["use"]=self.settings["grp/use"]
+	    self.settings["use"].append("bindlist")
+
+	def set_mounts(self):
+	    self.mounts.append("/tmp/grp")
+            self.mountmap["/tmp/grp"]=self.settings["target_path"]
 
 def register(foo):
 	foo.update({"grp":grp_target})
