@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/tinderbox_target.py,v 1.3 2004/10/15 02:27:58 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/tinderbox_target.py,v 1.4 2004/12/16 23:13:24 wolf31o2 Exp $
 
 """
 builder class for the tinderbox target
@@ -26,7 +26,11 @@ class tinderbox_target(generic_stage_target):
 		except CatalystError:
 			self.unbind()
 			raise CatalystError,"Tinderbox aborting due to error."
-
+	
+	def set_target_path(self):
+	    self.settings["target_path"]=self.settings["storedir"]+"/builds/"+self.settings["target_subpath"]
+	def set_use(self):
+	            self.settings["use"]=self.settings["tinderbox/use"]
 def register(foo):
 	foo.update({"tinderbox":tinderbox_target})
 	return foo
