@@ -1,6 +1,14 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.126 2004/12/16 20:01:38 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.127 2004/12/16 23:13:24 wolf31o2 Exp $
+
+  16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  modules/catalyst_support.py, modules/embedded_target.py,
+  modules/generic_stage_target.py, modules/grp_target.py,
+  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,
+  modules/netboot.py, modules/stage1_target.py, modules/tinderbox_target.py:
+  Added patches from Eric Edgar <e_edgar@hotmail.com> from bug #70663 to
+  separate out specific target logic from the generic targets modules.
 
   16 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
   modules/embedded_target.py, targets/embedded/embedded-fs-runscript.sh,
